--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
     "tsBuildInfoFile": ".tsbuildinfo",
     "target": "ES2022",
     "baseUrl": ".",
-    "module": "ESNext",
+    "module": "NodeNext",
     "types": ["node"],
-    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "noUnusedLocals": false,
     "strict": true,
